# camus

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  fuzz.yml  release-qualification.yml  security.yml  semantic-pr.yml
benchmarks/: Cargo.toml  README.md
benchmarks/src/: diagnostics.rs  main.rs  metrics.rs  model.rs  scenarios.rs  workloads.rs
benchmarks/src/engines/: camus_engine.rs  mod.rs  redb_engine.rs  rocksdb_engine.rs  simple_file_engine.rs
docs/: architecture.md  benchmarks.md  file-format.md  glossary.md  long-running-smoke.md  observability.md  operations.md  releasing.md  usage.md
docs/adr/: 0001-async-stream-readiness.md
examples/: README.md  durable_replay.rs  maintenance.rs  multi_stream.rs  observability.rs  readiness.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: manifest_recovery.rs  segment_recovery.rs  wal_recovery.rs
smoke/: Cargo.toml  README.md
smoke/src/: main.rs  telemetry.rs  workload.rs
smoke/tests/: backlog.rs
src/: api.rs  config.rs  error.rs  format.rs  lib.rs  model.rs  runtime.rs  test_crash.rs  wal.rs
src/storage/: crash_tests.rs  files.rs  manifest.rs  mod.rs  segment.rs
src/wal/: tests.rs
tests/: format_v1_compatibility.rs  lifecycle_stress.rs  process_lock.rs  public_api.rs
tests/fixtures/format-v1/v1-basic/: README.md
tests/fixtures/format-v1/v1-basic/root/: MANIFEST.chk  ROOT
tests/fixtures/format-v1/v1.0.0-active-multistream/: README.md
tests/fixtures/format-v1/v1.0.0-active-multistream/root/: MANIFEST.chk  ROOT
tests/fixtures/format-v1/v1.0.0-rc.1/: README.md
tests/fixtures/format-v1/v1.0.0-rc.1/root/: MANIFEST.chk  ROOT
tests/fixtures/format-v1/v1.0.0-reclaimed-empty/: README.md
tests/fixtures/format-v1/v1.0.0-reclaimed-empty/root/: MANIFEST.chk  ROOT
tests/fixtures/format-v1/v1.0.0-sealed-pending/: README.md
tests/fixtures/format-v1/v1.0.0-sealed-pending/root/: MANIFEST.chk  ROOT
