[package]
name = "camus"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "An embedded persistent buffer with at-least-once storage handoff."
license = "Apache-2.0"
repository = "https://github.com/leiysky/camus"
readme = "README.md"
documentation = "https://docs.rs/camus"
keywords = ["persistence", "buffer", "embedded", "async", "storage"]
categories = ["data-structures", "filesystem"]
exclude = ["/.github", "/AGENTS.md", "/benchmarks", "/fuzz", "/smoke"]

[dependencies]
bytes = "1"
fs2 = "0.4"
getrandom = "0.3"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3.10"
