[package]
name = "camus-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
camus = { path = ".." }
tempfile = "3.10"

[[bin]]
name = "wal_recovery"
path = "fuzz_targets/wal_recovery.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_recovery"
path = "fuzz_targets/manifest_recovery.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

[workspace]
members = ["."]
