[package]
name = "camus-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
bytes = "1"
libfuzzer-sys = "0.4"
camus = { path = ".." }
tempfile = "3.10"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bin]]
name = "segment_recovery"
path = "fuzz_targets/segment_recovery.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_recovery"
path = "fuzz_targets/manifest_recovery.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

[workspace]
members = ["."]
