[package]
name = "camus-long-smoke"
version = "0.0.0"
edition = "2021"
rust-version = "1.95"
publish = false
license = "MIT"

[dependencies]
anyhow = "1"
bytes = "1"
camus = { path = ".." }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
hdrhistogram = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
